minor update to README

--- a/README.adoc
+++ b/README.adoc
@@ -149,11 +149,20 @@ In your terminal, execute the following command (while inside the project folder
 The install command uses dependency information defined in [.path]_package.json_ and [.path]_yarn.lock_ to resolve dependencies, which Yarn then installs inside the project under the [.path]_node_modules_ folder.
 
 The playbook project only has one top-level dependency, which is opendevise-site-generator-express.
+This dependency is defined in [.path]_package.json_:
+
+[source,json,subs=attributes+]
+----
+"dependencies": {
+  "opendevise-site-generator-express": "{uri-site-generator}#v1.5.0-beta.4"
+},
+----
+
 The {uri-site-generator}[opendevise-site-generator-express] dependency supplies the main site generator software.
 It's preconfigured to generate a documentation site based on the <<Playbook,playbook>> defined in this project.
 The site generator has it's own transitive dependencies, of course, but those get fetched automatically by Yarn.
 
-Let's look at what's in this playbook, then move on to generating the site.
+Let's look at what information the playbook provides, then move on to how to generate the site.
 
 == Playbook
 
