update preamble [skip ci] [skip ci] [skip ci] [skip ci]

--- a/README.adoc
+++ b/README.adoc
@@ -34,8 +34,8 @@ endif::[]
 This repository hosts the playbook project for generating the new MuleSoft Documentation site ("`docs site`").
 It's strictly a configuration as code repository.
 That means it does not contain any software, nor does it contain any content.
-Instead, it provides instructions for fetching the software and the content it needs and executing the main script to generate the site files.
-It also includes CI configuration for running the generator and publishing the output files to a web server.
+Instead, it instructs an automated tool how to fetch the software and content it needs and, subsequntly, how to generate the site files.
+The repository also includes CI configuration for running the generator and publishing the output files to a web server.
 
 .Disclaimer
 WARNING: At the moment, this repository is intended to be used for testing the new site generator pipeline.
