add note icon [skip ci]

--- a/README.adoc
+++ b/README.adoc
@@ -9,6 +9,7 @@
 ifndef::env-github[:icons: font]
 ifdef::env-github[]
 :important-caption: :exclamation:
+:note-caption: :paperclip:
 :warning-caption: :warning:
 endif::[]
 // URIs
