minor wording change [skip ci]

--- a/README.adoc
+++ b/README.adoc
@@ -266,13 +266,14 @@ Details about how the theme is created, bundled, published, and consumed can be 
 
 == Generating the Site
 
-Now that you've told the generator which content to use and what page theme to apply to that content, it's time to run it.
+Now that you've told the generator which content to use and which page theme to apply to that content, it's time to run it.
 
-To run the site, you'll invoke the site generator using yarn:
+You invoke the site generator using Yarn:
 
  $ yarn run generator
 
-When generation is complete, you will see a URL in the console (specific to your machine) that you can use to preview the site locally in a browser.
+When generation is complete, you'll see a URL in the console that is specific to your machine.
+You can follow this URL to preview the site locally in your browser.
 
 [.output]
 ....
@@ -284,7 +285,7 @@ Site can be viewed at file:///home/user/projects/docs-site/build/site
 Done in 106.89s.
 ....
 
-What happens in the `\...` is explained in the next section.
+What happens in the `\...` part is explained in the next section.
 
 == The Generator Pipeline
 
